--- a/templates/customerinfo.html
+++ b/templates/customerinfo.html
@@ -7,7 +7,7 @@
         </TD>
         <TD width="99%">
 			{$customerinfo.name} {$customerinfo.lastname}
-            {if $customerinfo.extid} External ID{$customerinfo.extid}{/if}
+            {if $customerinfo.extid} External ID: {$customerinfo.extid}{/if}
         </TD>
     </TR>
 	</THEAD>
