--- a/templates/nodeinfo.html
+++ b/templates/nodeinfo.html
@@ -96,7 +96,7 @@
     </TR>
 	{foreachelse}
     <TR>
-        <TD colspan="3">No configuration found in database.</TD>
+        <TD colspan="3" align="center">No configuration found in database.</TD>
     </TR>
 	{/foreach}
 	<form action="?m=nodeconfigadd&amp;nodeid={$nodeinfo.id}" method="post">
